<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/title_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/date_sec"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/date_sec"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Title"
        android:inputType="textPersonName"
        android:maxLength="20" />

    <EditText
        android:id="@+id/date_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_sec"
        android:layout_alignStart="@+id/time_sec"
        android:layout_below="@+id/title_sec"
        android:layout_marginTop="21dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="Date"
        android:inputType="date" />

    <EditText
        android:id="@+id/time_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_sec"
        android:layout_marginLeft="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="23dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:ems="10"
        android:focusable="false"
        android:hint="time"
        android:inputType="time" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_sec"
        android:layout_alignStart="@+id/time_sec"
        android:layout_centerVertical="true"
        android:layout_marginLeft="71dp"
        android:layout_marginStart="71dp">

        <RadioButton
            android:id="@+id/high_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/high_sec" />

        <RadioButton
            android:id="@+id/medium_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/medium_sec" />

        <RadioButton
            android:id="@+id/low_sec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/low_sec" />
    </RadioGroup>

    <TextView
        android:id="@+id/priority"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/time_sec"
        android:layout_alignStart="@+id/time_sec"
        android:layout_alignTop="@+id/radioGroup"
        android:text="@string/priority" />

    <Button
        android:id="@+id/save_sec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="71dp"
        android:text="@string/save_sec" />


</RelativeLayout>